feat: 코드래빗 1차 수정