@@ -6,6 +6,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationCredentialsNotFoundException;
 import org.springframework.security.authentication.BadCredentialsException;
@@ -47,10 +48,10 @@ public class AuthFailHandler extends SimpleUrlAuthenticationFailureHandler {
             errorMessage = "알 수 없는 오류로 로그인 요청을 처리할 수 없습니다.";
         }
 
-        errorMessage = URLEncoder.encode(errorMessage, "UTF-8");
-        setDefaultFailureUrl("/auth/fail?message" + errorMessage);
+        String encoded = URLEncoder.encode(errorMessage, StandardCharsets.UTF_8);
+        saveException(request, exception);
 
-        super.onAuthenticationFailure(request, response, exception);
+        getRedirectStrategy().sendRedirect(request, response, "/auth/fail?message=" + encoded);
 
     }
 }
